; ModuleID = '/home/carl/AnghaBench/scrcpy/app/src/extr_controller.c_controller_destroy.c'
source_filename = "/home/carl/AnghaBench/scrcpy/app/src/extr_controller.c_controller_destroy.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.controller = type { i32, i32, i32, i32 }
%struct.control_msg = type { i32 }

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @controller_destroy(%struct.controller* %0) #0 {
  %2 = alloca %struct.controller*, align 8
  %3 = alloca %struct.control_msg, align 4
  store %struct.controller* %0, %struct.controller** %2, align 8
  %4 = load %struct.controller*, %struct.controller** %2, align 8
  %5 = getelementptr inbounds %struct.controller, %struct.controller* %4, i32 0, i32 3
  %6 = load i32, i32* %5, align 4
  %7 = call i32 @SDL_DestroyCond(i32 %6)
  %8 = load %struct.controller*, %struct.controller** %2, align 8
  %9 = getelementptr inbounds %struct.controller, %struct.controller* %8, i32 0, i32 2
  %10 = load i32, i32* %9, align 4
  %11 = call i32 @SDL_DestroyMutex(i32 %10)
  br label %12

12:                                               ; preds = %17, %1
  %13 = load %struct.controller*, %struct.controller** %2, align 8
  %14 = getelementptr inbounds %struct.controller, %struct.controller* %13, i32 0, i32 1
  %15 = call i64 @cbuf_take(i32* %14, %struct.control_msg* %3)
  %16 = icmp ne i64 %15, 0
  br i1 %16, label %17, label %19

17:                                               ; preds = %12
  %18 = call i32 @control_msg_destroy(%struct.control_msg* %3)
  br label %12

19:                                               ; preds = %12
  %20 = load %struct.controller*, %struct.controller** %2, align 8
  %21 = getelementptr inbounds %struct.controller, %struct.controller* %20, i32 0, i32 0
  %22 = call i32 @receiver_destroy(i32* %21)
  ret void
}

declare dso_local i32 @SDL_DestroyCond(i32) #1

declare dso_local i32 @SDL_DestroyMutex(i32) #1

declare dso_local i64 @cbuf_take(i32*, %struct.control_msg*) #1

declare dso_local i32 @control_msg_destroy(%struct.control_msg*) #1

declare dso_local i32 @receiver_destroy(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
